Tincan/trunk/build/0610build_output.txt
if [ ! -d ../out/release/x86_64/obj ]; then  mkdir -p ../out/release/x86_64/obj; fi
g++ -iquote ../include -isystem ../../external/include  -isystem ../../external/include/webrtc -DLINUX -D_IPOP_LINUX -DWEBRTC_POSIX -DWEBRTC_LINUX -D_GLIBCXX_USE_CXX11_ABI=0 -O3 -std=c++14 -pthread -g2 -gsplit-dwarf -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -funwind-tables -fPIC -pipe -Wall -fno-rtti -c ../src/tincan_main.cc -o ../out/release/x86_64/obj/tincan_main.o
In file included from ../../external/include/webrtc/base/logging.h:18:0,
                 from ../../external/include/webrtc/base/containers/checked_iterators.h:13,
                 from ../../external/include/webrtc/base/containers/span.h:17,
                 from ../../external/include/webrtc/base/files/file_util.h:26,
                 from ../include/control_dispatch.h:28,
                 from ../include/control_listener.h:34,
                 from ../include/tincan.h:27,
                 from ../src/tincan_main.cc:25:
../../external/include/webrtc/base/check_op.h: In function ‘constexpr logging::CheckOpResult logging::CheckEQImpl(int, int, const char*)’:
../../external/include/webrtc/base/check_op.h:179:1: error: call to non-constexpr function ‘logging::CheckOpResult::CheckOpResult(const char*, char*, char*)’
 DEFINE_CHECK_OP_IMPL(EQ, ==)
 ^
../../external/include/webrtc/base/check_op.h: In function ‘constexpr logging::CheckOpResult logging::CheckNEImpl(int, int, const char*)’:
../../external/include/webrtc/base/check_op.h:180:1: error: call to non-constexpr function ‘logging::CheckOpResult::CheckOpResult(const char*, char*, char*)’
 DEFINE_CHECK_OP_IMPL(NE, !=)
 ^
../../external/include/webrtc/base/check_op.h: In function ‘constexpr logging::CheckOpResult logging::CheckLEImpl(int, int, const char*)’:
../../external/include/webrtc/base/check_op.h:181:1: error: call to non-constexpr function ‘logging::CheckOpResult::CheckOpResult(const char*, char*, char*)’
 DEFINE_CHECK_OP_IMPL(LE, <=)
 ^
../../external/include/webrtc/base/check_op.h: In function ‘constexpr logging::CheckOpResult logging::CheckLTImpl(int, int, const char*)’:
../../external/include/webrtc/base/check_op.h:182:1: error: call to non-constexpr function ‘logging::CheckOpResult::CheckOpResult(const char*, char*, char*)’
 DEFINE_CHECK_OP_IMPL(LT, < )
 ^
../../external/include/webrtc/base/check_op.h: In function ‘constexpr logging::CheckOpResult logging::CheckGEImpl(int, int, const char*)’:
../../external/include/webrtc/base/check_op.h:183:1: error: call to non-constexpr function ‘logging::CheckOpResult::CheckOpResult(const char*, char*, char*)’
 DEFINE_CHECK_OP_IMPL(GE, >=)
 ^
../../external/include/webrtc/base/check_op.h: In function ‘constexpr logging::CheckOpResult logging::CheckGTImpl(int, int, const char*)’:
../../external/include/webrtc/base/check_op.h:184:1: error: call to non-constexpr function ‘logging::CheckOpResult::CheckOpResult(const char*, char*, char*)’
 DEFINE_CHECK_OP_IMPL(GT, > )
 ^
In file included from ../include/control_listener.h:34:0,
                 from ../include/tincan.h:27,
                 from ../src/tincan_main.cc:25:
../include/control_dispatch.h: At global scope:
../include/control_dispatch.h:40:12: error: ‘rtc::Filesystem’ has not been declared
 using rtc::Filesystem;
            ^~~~~~~~~~
../include/control_dispatch.h:41:12: error: ‘rtc::Pathname’ has not been declared
 using rtc::Pathname;
            ^~~~~~~~
In file included from ../../external/include/webrtc/base/containers/checked_iterators.h:13:0,
                 from ../../external/include/webrtc/base/containers/span.h:17,
                 from ../../external/include/webrtc/base/files/file_util.h:26,
                 from ../include/control_dispatch.h:28,
                 from ../include/control_listener.h:34,
                 from ../include/tincan.h:27,
                 from ../src/tincan_main.cc:25:
../include/control_dispatch.h: In member function ‘virtual void tincan::ControlDispatch::DisconnectedControllerHandle::Deliver(tincan::TincanControl&)’:
../include/control_dispatch.h:83:7: error: ‘LOG_LS_INFO’ is not a member of ‘logging’
       LOG(LS_INFO) << msg_ << endl;
       ^
../include/control_dispatch.h:83:7: note: suggested alternative: ‘LOG_INFO’
../include/control_dispatch.h:83:7: error: ‘COMPACT_GOOGLE_LOG_LS_INFO’ was not declared in this scope
       LOG(LS_INFO) << msg_ << endl;
       ^
../include/control_dispatch.h:83:7: note: suggested alternative: ‘COMPACT_GOOGLE_LOG_EX_INFO’
../include/control_dispatch.h: In member function ‘virtual void tincan::ControlDispatch::DisconnectedControllerHandle::Deliver(std::unique_ptr<tincan::TincanControl>)’:
../include/control_dispatch.h:88:7: error: ‘LOG_LS_INFO’ is not a member of ‘logging’
       LOG(LS_INFO) << msg_ << endl;
       ^
../include/control_dispatch.h:88:7: note: suggested alternative: ‘LOG_INFO’
../include/control_dispatch.h:88:7: error: ‘COMPACT_GOOGLE_LOG_LS_INFO’ was not declared in this scope
       LOG(LS_INFO) << msg_ << endl;
       ^
../include/control_dispatch.h:88:7: note: suggested alternative: ‘COMPACT_GOOGLE_LOG_EX_INFO’
In file included from ../include/tincan.h:27:0,
                 from ../src/tincan_main.cc:25:
../include/control_listener.h: At global scope:
../include/control_listener.h:46:1: error: expected class-name before ‘{’ token
 {
 ^
../include/control_listener.h:55:11: error: ‘PacketTime’ does not name a type; did you mean ‘adjtime’?
     const PacketTime & ptime);
           ^~~~~~~~~~
           adjtime
../include/control_listener.h:72:8: error: ‘void tincan::ControlListener::Run(rtc::Thread*)’ marked ‘override’, but does not override
   void Run(Thread* thread) override;
        ^~~
In file included from ../include/peer_network.h:26:0,
                 from ../include/basic_tunnel.h:39,
                 from ../include/single_link_tunnel.h:26,
                 from ../include/tincan.h:29,
                 from ../src/tincan_main.cc:25:
../include/virtual_link.h:46:16: error: ‘cricket::TransportController’ has not been declared
 using cricket::TransportController;
                ^~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:47:16: error: ‘cricket::TransportChannelImpl’ has not been declared
 using cricket::TransportChannelImpl;
                ^~~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:48:16: error: ‘cricket::TransportChannel’ has not been declared
 using cricket::TransportChannel;
                ^~~~~~~~~~~~~~~~
../include/virtual_link.h:50:12: error: ‘rtc::PacketTransportInterface’ has not been declared
 using rtc::PacketTransportInterface;
            ^~~~~~~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:132:5: error: ‘PacketTransportInterface’ has not been declared
     PacketTransportInterface * transport);
     ^~~~~~~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:143:5: error: ‘PacketTransportInterface’ has not been declared
     PacketTransportInterface* transport,
     ^~~~~~~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:146:11: error: ‘PacketTime’ does not name a type; did you mean ‘adjtime’?
     const PacketTime & ptime,
           ^~~~~~~~~~
           adjtime
../include/virtual_link.h:150:5: error: ‘PacketTransportInterface’ has not been declared
     PacketTransportInterface * transport,
     ^~~~~~~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:160:3: error: ‘TransportChannel’ does not name a type
   TransportChannel * channel_;
   ^~~~~~~~~~~~~~~~
../include/virtual_link.h:168:23: error: ‘TransportController’ is not a member of ‘cricket’
   unique_ptr<cricket::TransportController> transport_ctlr_;
                       ^~~~~~~~~~~~~~~~~~~
../include/virtual_link.h:168:23: note: suggested alternative: ‘TransportOptions’
   unique_ptr<cricket::TransportController> transport_ctlr_;
                       ^~~~~~~~~~~~~~~~~~~
                       TransportOptions
../include/virtual_link.h:168:23: error: ‘TransportController’ is not a member of ‘cricket’
../include/virtual_link.h:168:23: note: suggested alternative: ‘TransportOptions’
   unique_ptr<cricket::TransportController> transport_ctlr_;
                       ^~~~~~~~~~~~~~~~~~~
                       TransportOptions
../include/virtual_link.h:168:42: error: template argument 1 is invalid
   unique_ptr<cricket::TransportController> transport_ctlr_;
                                          ^
../include/virtual_link.h:168:42: error: template argument 2 is invalid
In file included from ../include/basic_tunnel.h:39:0,
                 from ../include/single_link_tunnel.h:26,
                 from ../include/tincan.h:29,
                 from ../src/tincan_main.cc:25:
../include/peer_network.h:35:1: error: expected class-name before ‘{’ token
 {
 ^
../include/peer_network.h:86:8: error: ‘void tincan::PeerNetwork::Run(rtc::Thread*)’ marked ‘override’, but does not override
   void Run(Thread* thread) override;
        ^~~
In file included from ../../external/include/webrtc/base/containers/checked_iterators.h:13:0,
                 from ../../external/include/webrtc/base/containers/span.h:17,
                 from ../../external/include/webrtc/base/files/file_util.h:26,
                 from ../include/control_dispatch.h:28,
                 from ../include/control_listener.h:34,
                 from ../include/tincan.h:27,
                 from ../src/tincan_main.cc:25:
../src/tincan_main.cc: In function ‘int main(int, char**)’:
../src/tincan_main.cc:55:5: error: ‘LOG_LS_ERROR’ is not a member of ‘logging’
     LOG(LS_ERROR) << e.what();
     ^
../src/tincan_main.cc:55:5: note: suggested alternative: ‘LOG_ERROR’
../src/tincan_main.cc:55:5: error: ‘COMPACT_GOOGLE_LOG_LS_ERROR’ was not declared in this scope
     LOG(LS_ERROR) << e.what();
     ^
../src/tincan_main.cc:55:5: note: suggested alternative: ‘COMPACT_GOOGLE_LOG_EX_ERROR’
Makefile:23: recipe for target '../out/release/x86_64/obj/tincan_main.o' failed
make: *** [../out/release/x86_64/obj/tincan_main.o] Error 1
